// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bildwurf Ad Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    id=":r0:"
  >
    <ins
      class="aso-zone"
      data-zone="77348"
    />
  </div>
</DocumentFragment>
`;

exports[`Bildwurf Ad Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0"
    id=":r1:"
  >
    <ins
      class="aso-zone"
      data-zone="77348"
    />
  </div>
</DocumentFragment>
`;
